# Facial_Key_Feature_Recognition

./: CMakeLists.txt  README.md
src/: cpuFunctions.cpp  cudaGrayscale.cu  cudaNorm.cu  globalVar.h  main.cpp  openCV_APIs.cpp  timer.h
src/modified/: main.cpp
